; Concatenate themed FPP files into mirage.fpp (used by tests)

(rule
 (target mirage.fpp)
 (deps types.fpp devices.fpp stacks.fpp websites.fpp)
 (action
  (bash "cat %{deps} > %{target}")))

; Generate module type aliases

(rule
 (mode
  (promote (until-clean)))
 (targets mirage.ml mirage.mli)
 (deps types.fpp devices.fpp stacks.fpp websites.fpp)
 (action
  (run %{bin:ofpp} to-ml --types -o mirage.ml %{deps})))

; Generate topology + entry point for UnixWebsite

(rule
 (mode
  (promote (until-clean)))
 (target main.ml)
 (deps types.fpp devices.fpp stacks.fpp websites.fpp)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixWebsite %{deps}))))

; Crunch static assets into Mirage_kv.RO-compatible modules

(rule
 (target htdocs_data.ml)
 (deps
  (source_tree htdocs))
 (action
  (with-stdout-to
   %{target}
   (run ocaml-crunch --mode lwt htdocs))))

(rule
 (target tls_data.ml)
 (deps
  (source_tree tls))
 (action
  (with-stdout-to
   %{target}
   (run ocaml-crunch --mode lwt tls))))

(executable
 (name main)
 (modules main mirage server htdocs_data tls_data)
 (libraries
  mirage-block
  mirage-vnetif
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.ipv6
  tcpip.icmpv4
  tcpip.udp
  tcpip
  tcpip.tcp
  tcpip.stack-direct
  tcpip.stack-socket
  tcpip.tcpv4v6-socket
  tcpip.udpv4v6-socket
  conduit-mirage
  tls
  tls-mirage
  x509
  cstruct
  mirage-kv
  mirage-kv-mem
  cohttp-mirage
  cohttp-lwt
  cohttp
  magic-mime
  uri
  lwt
  lwt.unix
  ipaddr
  mirage-crypto-rng.unix
  mirage-sleep.unix
  mirage-mtime.unix
  logs
  logs.fmt
  fmt))
