; Concatenate themed FPP files into mirage.fpp (used by tests)

(rule
 (target mirage.fpp)
 (deps types.fpp devices.fpp stacks.fpp websites.fpp)
 (action
  (bash "cat %{deps} > %{target}")))

; Generate topology + entry point for UnixWebsite

(rule
 (mode
  (promote (until-clean)))
 (target main.ml)
 (deps types.fpp devices.fpp stacks.fpp websites.fpp)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixWebsite %{deps}))))

; Crunch static assets into Mirage_kv.RO-compatible modules

(rule
 (targets htdocs_data.ml htdocs_data.mli)
 (deps
  (source_tree htdocs))
 (action
  (run ocaml-crunch -o htdocs_data.ml htdocs)))

(rule
 (targets tls_data.ml tls_data.mli)
 (deps
  (source_tree tls))
 (action
  (run ocaml-crunch -o tls_data.ml tls)))

(executable
 (name main)
 (modules main server socket_runtime htdocs_data tls_data)
 (libraries
  mirage-block
  mirage-vnetif
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.ipv6
  tcpip.icmpv4
  tcpip.udp
  tcpip
  tcpip.tcp
  tcpip.stack-direct
  tcpip.stack-socket
  tcpip.tcpv4v6-socket
  tcpip.udpv4v6-socket
  conduit-mirage
  tls
  tls-mirage
  x509
  cstruct
  mirage-kv
  mirage-kv-mem
  cohttp-mirage
  cohttp-lwt
  cohttp
  magic-mime
  uri
  lwt
  lwt.unix
  ipaddr
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  duration
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt))
