; Compilation tests for MirageOS topologies.
; Generated code is compiled against real MirageOS library signatures.

(library
 (name website_support)
 (modules server htdocs_data tls_data)
 (wrapped false)
 (libraries
  lwt
  lwt.unix
  cstruct
  macaddr
  mirage-block
  mirage-vnetif
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.ipv6
  tcpip.stack-direct
  tcpip.icmpv4
  tcpip.udp
  tcpip.tcp
  tcpip.stack-socket
  tcpip.tcpv4v6-socket
  tcpip.udpv4v6-socket
  mirage-kv-mem
  happy-eyeballs-mirage
  dns-client-mirage))

; ── Fully-bound Unix topologies (executables) ──────────────────────
;
; These topologies bind every instance to a concrete module via
; [@ ocaml.module], so the generated code is a standalone executable.

(rule
 (target test_unix_test.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixTestWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target test_multi_bound.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run
    %{ofpp}
    to-ml
    --topologies
    UnixWebsite,UnixTestWebsite
    %{t}
    %{d}
    %{s}
    %{w}))))

; ── Build and run ──────────────────────────────────────────────────

(executables
 (names
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound)
 (libraries website_support)
 (modules
  test_server
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound))

(rule
 (alias runtest)
 (deps
  test_unix_test.exe
  test_unix_website.exe
  test_unix_website_dns.exe
  test_multi_bound.exe)
 (action
  (echo "website compilation tests: OK\n")))

; ── Code generation tests ─────────────────────────────────────────
;
; Parameterised (functor) topologies: code generation succeeds but
; the generated module types don't match real MirageOS signatures
; (e.g. BACKEND is missing register/unregister/set_listen_fn).
; We test that ofpp to-ml produces output without crashing.

(rule
 (target gen_static_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_static_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target gen_tar_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies TarWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_fat_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies FatWebsite %{t} %{d} %{s} %{w}))))

(rule
 (alias runtest)
 (deps
  gen_static_website.ml
  gen_static_website_dns.ml
  gen_tar_website.ml
  gen_fat_website.ml)
 (action
  (echo "topology code generation tests: OK\n")))
