; Compilation tests for MirageOS topologies.
; Generated code is compiled against real MirageOS library signatures.

; ── Check: all mirage FPP files must pass ofpp check ─────────────

(rule
 (alias runtest)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (run %{ofpp} check %{t} %{d} %{s} %{w})))

(library
 (name website_support)
 (modules server socket_runtime dns_runtime htdocs_data tls_data fat)
 (wrapped false)
 (libraries
  lwt
  lwt.unix
  cstruct
  macaddr
  mirage-block
  mirage-kv
  mirage-vnetif
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.ipv6
  tcpip.stack-direct
  tcpip.icmpv4
  tcpip.udp
  tcpip.tcp
  tcpip.stack-socket
  tcpip.tcpv4v6-socket
  tcpip.udpv4v6-socket
  mirage-kv-mem
  happy-eyeballs-mirage
  dns-client-mirage))

; ── Fully-bound Unix topologies (executables) ──────────────────────
;
; These topologies use instance names that match concrete modules
; (plus a few [@ ocaml.module] wrappers), so the generated code
; is a standalone executable.

(rule
 (target test_unix_test.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixTestWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target test_multi_bound.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run
    %{ofpp}
    to-ml
    --topologies
    UnixWebsite,UnixTestWebsite
    %{t}
    %{d}
    %{s}
    %{w}))))

; ── Build and run ──────────────────────────────────────────────────

(executables
 (names
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound)
 (libraries website_support)
 (modules
  test_server
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound))

(rule
 (alias runtest)
 (deps
  test_unix_test.exe
  test_unix_website.exe
  test_unix_website_dns.exe
  test_multi_bound.exe)
 (action
  (echo "website compilation tests: OK\n")))

; ── Parameterised (functor) topologies ─────────────────────────────
;
; Generated code uses [@ ocaml.sig] module type aliases, so module
; types match real MirageOS signatures and topologies compile as
; libraries.  Fat uses a local stub (fat-filesystem requires
; mirage-kv < 5).

(rule
 (target gen_static_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_static_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target gen_tar_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies TarWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_fat_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies FatWebsite %{t} %{d} %{s} %{w}))))

(library
 (name website_parameterised)
 (modules
  gen_static_website
  gen_static_website_dns
  gen_tar_website
  gen_fat_website)
 (libraries website_support tar-mirage))

(rule
 (alias runtest)
 (deps
  (alias_rec default))
 (action
  (echo "parameterised topology compilation tests: OK\n")))
