; Compilation and execution tests for MirageOS topologies.
; Generated code is compiled against real MirageOS library signatures
; and run end-to-end.

; ── Check: all mirage FPP files must pass ofpp check ─────────────

(rule
 (alias runtest)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (run %{ofpp} check %{t} %{d} %{s} %{w})))

(library
 (name website_support)
 (modules
  server
  socket_runtime
  dns_runtime
  htdocs_data
  tls_data
  fat
  ramdisk
  conduit_mirage
  cohttp_mirage)
 (wrapped false)
 (libraries
  lwt
  lwt.unix
  cstruct
  macaddr
  mirage-block
  mirage-kv
  mirage-vnetif
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.ipv6
  tcpip.stack-direct
  tcpip.icmpv4
  tcpip.udp
  tcpip.tcp
  tcpip.stack-socket
  tcpip.tcpv4v6-socket
  tcpip.udpv4v6-socket
  mirage-kv-mem
  happy-eyeballs-mirage
  dns-client-mirage))

; ── Fully-bound Unix topologies (executables) ──────────────────────
;
; These topologies use instance names that match concrete modules
; (plus a few [@ ocaml.module] wrappers), so the generated code
; is a standalone executable.

(rule
 (target test_unix_test.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixTestWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target test_unix_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies UnixWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target test_multi_bound.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run
    %{ofpp}
    to-ml
    --topologies
    UnixWebsite,UnixTestWebsite
    %{t}
    %{d}
    %{s}
    %{w}))))

; ── Build and run flat topologies ─────────────────────────────────

(executables
 (names
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound)
 (libraries website_support mirage-crypto-rng.unix logs logs.fmt fmt)
 (modules
  test_unix_test
  test_unix_website
  test_unix_website_dns
  test_multi_bound))

(rule
 (alias runtest)
 (deps test_unix_test.exe)
 (action
  (run ./test_unix_test.exe)))

(rule
 (alias runtest)
 (deps test_unix_website.exe)
 (action
  (run ./test_unix_website.exe)))

(rule
 (alias runtest)
 (deps test_unix_website_dns.exe)
 (action
  (run ./test_unix_website_dns.exe)))

(rule
 (alias runtest)
 (deps test_multi_bound.exe)
 (action
  (run ./test_multi_bound.exe)))

; ── Parameterised (functor) topologies ─────────────────────────────
;
; Generated code uses [@ ocaml.sig] module type aliases, so module
; types match real MirageOS signatures and topologies compile as
; libraries.  Fat uses a local stub (fat-filesystem requires
; mirage-kv < 5).

(rule
 (target gen_static_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_static_website_dns.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies StaticWebsiteWithDns %{t} %{d} %{s} %{w}))))

(rule
 (target gen_tar_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies TarWebsite %{t} %{d} %{s} %{w}))))

(rule
 (target gen_fat_website.ml)
 (deps
  (:ofpp ../../../bin/main.exe)
  (:t ../../../examples/mirage/types.fpp)
  (:d ../../../examples/mirage/devices.fpp)
  (:s ../../../examples/mirage/stacks.fpp)
  (:w ../../../examples/mirage/websites.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{ofpp} to-ml --topologies FatWebsite %{t} %{d} %{s} %{w}))))

(library
 (name website_parameterised)
 (modules
  gen_static_website
  gen_static_website_dns
  gen_tar_website
  gen_fat_website)
 (wrapped false)
 (libraries
  website_support
  tar-mirage
  mirage-crypto-rng.unix
  logs
  logs.fmt
  fmt))

; ── Run parameterised topologies ──────────────────────────────────
;
; StaticWebsite and FatWebsite are instantiated with in-memory
; backends and run end-to-end.  DNS topologies (StaticWebsiteWithDns,
; TarWebsite) are compile-only: their connect_device/connect API
; requires a pre-existing stack, which is a known codegen limitation.

(executables
 (names run_static_website run_fat_website)
 (libraries
  website_parameterised
  mirage-vnetif
  mirage-kv-mem
  mirage-crypto-rng.unix
  logs
  logs.fmt
  fmt)
 (modules run_static_website run_fat_website))

(rule
 (alias runtest)
 (deps run_static_website.exe)
 (action
  (run ./run_static_website.exe)))

(rule
 (alias runtest)
 (deps run_fat_website.exe)
 (action
  (run ./run_fat_website.exe)))

(rule
 (alias runtest)
 (deps
  (alias_rec default))
 (action
  (echo "all topology tests: OK\n")))
