(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../mirage.fpp))
 (action
  (run %{bin:ofpp} to-ml --topologies UnixCrypto %{fpp})))

(executable
 (name main)
 (modules main unikernel)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  randomconv
  mirage-crypto-pk
  ohex
  digestif))

(alias
 (name runtest)
 (deps main.exe))
