(rule
 (target main.ml)
 (deps
  (:t ../../types.fpp)
  (:d ../../devices.fpp)
  (:s ../../stacks.fpp)
  (:a ../../applications.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixDhcp %{t} %{d} %{s} %{a}))))

(executable
 (name main)
 (modules main unikernel dhcp_config)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  mirage-net-unix
  ethernet
  arp
  charrua-server
  cstruct
  macaddr
  ipaddr))

(alias
 (name runtest)
 (deps main.exe))
