(copy_files
 (files ../../adapters/stackv4v6.ml))

(copy_files
 (files ../../adapters/conduit_tcp.ml))

(rule
 (target main.ml)
 (deps
  (:t ../../types.fpp)
  (:d ../../devices.fpp)
  (:s ../../stacks.fpp)
  (:a ../../applications.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixConduit %{t} %{d} %{s} %{a}))))

(executable
 (name main)
 (modules main unikernel conduit_tcp stackv4v6)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  ipaddr
  tcpip.stack-socket
  conduit-mirage
  cohttp-mirage))

(alias
 (name runtest)
 (deps main.exe))
