(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../mirage.fpp)
  (:cfg config.fpp))
 (action
  (run %{bin:ofpp} to-ml --topologies UnixConduit %{fpp} %{cfg})))

(executable
 (name main)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  ipaddr
  adapters
  tcpip.stack-socket
  conduit-mirage
  cohttp-mirage))

(alias
 (name runtest)
 (deps main.exe))
