(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../mirage.fpp))
 (action
  (run %{bin:ofpp} to-ml --topologies UnixDiskLottery %{fpp})))

(executable
 (name main)
 (modules main unikernel lotto)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  mirage-block-ramdisk
  checkseum
  cstruct))

(alias
 (name runtest)
 (deps main.exe))
