(rule
 (targets static_t.ml static_t.mli)
 (deps
  (source_tree t))
 (action
  (run ocaml-crunch t -o static_t.ml)))

(rule
 (target main.ml)
 (deps
  (:t ../../types.fpp)
  (:d ../../devices.fpp)
  (:s ../../stacks.fpp)
  (:a ../../applications.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixKvRo %{t} %{d} %{s} %{a}))))

(executable
 (name main)
 (modules main unikernel static_t)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  mirage-kv
  mirage-kv-mem))

(alias
 (name runtest)
 (deps main.exe))
