(rule
 (target main.ml)
 (deps
  (:t ../../types.fpp)
  (:d ../../devices.fpp)
  (:s ../../stacks.fpp)
  (:a ../../applications.fpp))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:ofpp} to-ml --topologies UnixNetwork %{t} %{d} %{s} %{a}))))

(executable
 (name main)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  cmdliner
  ipaddr
  adapters
  tcpip.stack-socket))

(alias
 (name runtest)
 (deps main.exe))
