(copy_files ../unikernel.ml)

(copy_files ../git_store.ml)

(copy_files ../git_ctx.ml)

(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../../mirage.fpp)
  (:cfg ../config.fpp))
 (action
  (run %{bin:ofpp} to-ml --topologies UnixGit %{fpp} %{cfg})))

(executable
 (name main)
 (modules main unikernel git_store git_ctx)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  cmdliner
  git
  git-unix
  git.nss.smart
  digestif
  ptime
  mimic
  happy-eyeballs-lwt))

(alias
 (name runtest)
 (deps main.exe))
