(copy_files ../unikernel.ml)

(rule
 (targets static_t.ml static_t.mli)
 (deps
  (source_tree ../t))
 (action
  (run ocaml-crunch ../t -o static_t.ml)))

(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../../mirage.fpp)
  (:cfg ../config.fpp))
 (action
  (run %{bin:ofpp} to-ml -t hvt --topologies Solo5KvRo %{fpp} %{cfg})))

(library
 (name kv_ro_hvt)
 (modules main unikernel static_t)
 (libraries
  lwt
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-solo5
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.solo5
  mirage-mtime.solo5
  mirage-ptime
  mirage-ptime.solo5
  logs
  fmt
  mirage-kv
  mirage-kv-mem))

(alias
 (name runtest)
 (deps
  (alias_rec all)))
