(copy_files ../unikernel.ml)

(rule
 (targets static_t.ml static_t.mli)
 (deps
  (source_tree ../t))
 (action
  (run ocaml-crunch ../t -o static_t.ml)))

(rule
 (mode promote)
 (targets main.ml main.mli)
 (deps
  (:fpp ../../../mirage.fpp)
  (:cfg ../config.fpp))
 (action
  (run %{bin:ofpp} to-ml --topologies UnixKvRo %{fpp} %{cfg})))

(executable
 (name main)
 (modules main unikernel static_t)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  mirage-kv
  mirage-kv-mem))

(alias
 (name runtest)
 (deps main.exe))
