(copy_files ../unikernel.ml)

(executable
 (name main)
 (modules main unikernel)
 (libraries
  lwt
  lwt.unix
  duration
  mirage-runtime
  mirage-bootvar
  cmdliner-stdlib
  mirage-logs
  mirage-unix
  mirage-crypto-rng-mirage
  mirage-crypto-rng
  mirage-sleep.unix
  mirage-mtime.unix
  mirage-ptime
  mirage-ptime.unix
  logs
  fmt
  cmdliner
  mirage-block
  mirage-block-unix
  mirage-kv
  chamelon
  chamelon.kv
  hxd.core
  hxd.string))

(alias
 (name runtest)
 (deps main.exe))
